--- a/casadocodigo/src/main/resources/application.properties
+++ b/casadocodigo/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 # data source
-spring.datasource.url=jdbc:h2:mem:alura-forum
+spring.datasource.url=jdbc:h2:mem:desafio-casa-do-codigo
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=pass
